[WFCORE-5406][WFLY-14793] Adding required --add-opens & --add-exports clauses to be able to run on both NOT MODULAR and MODULAR JDK types. The analysis why these modular jdk params are needed is available at WFCORE-5406 JIRA.